# imretOpenMVG

docs/: format.txt  instructions.txt  readme.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/imret/: CMakeLists.txt  dataType.hpp  imretFuncs.hpp
workspace/GPS/: GPS.txt~  GPS_DB.txt~  GPS_QR.txt  GPS_QR_processed.txt
workspace/gazes/: gazeData.txt~  yy2_gazes_sync.txt
workspace/groundtruth/: image.txt~
workspace/labels/: labels.txt~  labels_yy2.txt
